# wadamesh

./: TANMATSU_PORT.md  platformio.ini
boards/: tanmatsu.json
deploy/: gen-meshamerica-catalog.py  meshamerica-catalog.json
deploy/site/: index.html
include/: lv_conf.h
release-notes/: beta_11.txt
scripts/: release.sh
src/: MyMesh.cpp  MyMesh.h  main.cpp
src/helpers/esp32/: TouchPrefsStore.cpp  TouchPrefsStore.h
src/ui-touch/: TouchSleep.cpp  TouchSleep.h  UITask.cpp  i18n.cpp  sleepicons_font.c
tanmatsu/: .gitignore  Makefile  build.sh  esp-idf  esp-idf-tools  fetch-deps.sh
tanmatsu/components/ardlibs/: CMakeLists.txt
tanmatsu/components/esp_hosted/: CMakeLists.txt
tanmatsu/components/lvgl/: CMakeLists.txt
tanmatsu/components/meshcore/: CMakeLists.txt
tanmatsu/components/wadamesh_app/: CMakeLists.txt
tanmatsu/main/: CMakeLists.txt  _template_main.c.ref  idf_component.yml  main.cpp
tanmatsu/partition_tables/: esp32s3-8mb-noappfs.csv  esp32s3-8mb-noappfs.ods  esp32s3-8mb.csv  esp32s3-8mb.ods
tanmatsu/sdkconfigs/: heltecv3  wadamesh
variants/tanmatsu/: TanmatsuBoard.h  TanmatsuDisplay.h  TanmatsuLoraRadio.cpp  TanmatsuLoraRadio.h  idf_component.yml  ssl_client_stub.cpp  tanmatsu_compat.h  target.cpp  target.h
